--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         class="text-4xl md:text-5xl font-bold text-primary"
         data-aos="fade-up"
       >
-        Projector Store
+        WARLIGHT Store
       </h2>
       <!-- Deskripsi Hero Section:
          Teks pendukung di bawah judul, dengan lebar maksimum dan penundaan animasi. -->
