--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Biled Projector Store</title>
+    <title>Warligh Store</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Tailwind CSS CDN: Memuat kerangka kerja CSS utilitas untuk styling responsif. -->
     <script src="https://cdn.tailwindcss.com"></script>
