--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Tailwind CSS CDN: Memuat kerangka kerja CSS utilitas untuk styling responsif. -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- AOS Animation: Memuat library untuk animasi scroll-triggered. -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <!-- Lottie Animation: Memuat library untuk memutar animasi berbasis JSON. -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.6/lottie.min.js"></script>
+
+    <!-- Custom Styles: Menghubungkan ke stylesheet kustom untuk override atau styling tambahan. -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <style>
       /* Styles for the hamburger icon animation */
       #hamburger-button .line {
@@ -54,14 +63,6 @@
       };
     </script>
 
-    <!-- AOS Animation: Memuat library untuk animasi scroll-triggered. -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
-    <!-- Lottie Animation: Memuat library untuk memutar animasi berbasis JSON. -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.6/lottie.min.js"></script>
-
-    <!-- Custom Styles: Menghubungkan ke stylesheet kustom untuk override atau styling tambahan. -->
-    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body class="bg-dark text-soft">
     <!-- Placeholder untuk Header:
