--- a/produk.html
+++ b/produk.html
@@ -13,6 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
@@ -158,7 +160,7 @@
             const headerPlaceholder =
               document.getElementById("header-placeholder");
             if (headerPlaceholder) {
-              headerPlaceholder.innerHTML = 
+              headerPlaceholder.innerHTML =
                 '<p class="text-center text-red-500">Gagal memuat navigasi.</p>';
             }
           });
