--- a/preorder.html
+++ b/preorder.html
@@ -30,6 +30,8 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <!-- Font Orbitron (sudah ada di kode Anda) -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+
 
   <!-- Styles for the hamburger icon animation (dipindahkan ke sini dari header.html) -->
   <style>
